# AscendingClient

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.APACHE  README.md  SECURITY.md  log.txt  paniclog.txt  settings.toml
camera/: Cargo.toml
camera/src/: camera.rs  controls.rs  lib.rs  projection.rs
camera/src/controls/: first_person.rs  flat.rs  flying.rs  orbit.rs
client/: Cargo.toml
client/src/: content.rs  gfx_order.rs  inputs.rs  logic.rs  main.rs  renderer.rs  resource.rs
client/src/content/: game_content.rs  menu_content.rs
client/src/content/game_content/: content_input.rs
client/src/content/menu_content/: content_input.rs
client/src/content/menu_content/content_input/: login_input.rs  register_input.rs
client/src/interface/: widget.rs
client/src/interface/widget/: button.rs  checkbox.rs  label.rs  textbox.rs
graphics/: Cargo.toml
graphics/src/: atlas.rs  error.rs  font.rs  images.rs  lib.rs  lights.rs  maps.rs  mesh2d.rs  systems.rs  textures.rs  tilesheet.rs  ui.rs
graphics/src/atlas/: allocation.rs  allocator.rs  atlas.rs  atlas_set.rs
graphics/src/font/: pipeline.rs  render.rs  text.rs  vertex.rs
graphics/src/images/: image.rs  pipeline.rs  render.rs  vertex.rs
graphics/src/lights/: lights.rs  pipeline.rs  render.rs  uniforms.rs  vertex.rs
graphics/src/maps/: map.rs  pipeline.rs  render.rs  vertex.rs
graphics/src/mesh2d/: meshs.rs  pipeline.rs  render.rs  vertex.rs
graphics/src/shaders/: 2dmeshshader.wgsl  imageshader.wgsl  lightshader.wgsl  mapshader.wgsl  rectangle_shader.wgsl  textshader.wgsl
graphics/src/systems/: bounds.rs  buffer.rs  device.rs  draw_order.rs  instance_buffer.rs  layout.rs  pass.rs  pipelines.rs  renderer.rs  static_vbo.rs  system.rs  vbo.rs
graphics/src/textures/: texture.rs  texturegroup.rs  texturelayout.rs
graphics/src/ui/: pipeline.rs  rectangle.rs  render.rs  vertex.rs
input/: Cargo.toml
input/src/: axis.rs  bindings.rs  button.rs  frame_time.rs  handler.rs  keys.rs  lib.rs
keys/: ca-crt.pem  ca.pem  client-key.pem  client.crt  scaleway_ca-crt.pem
src/: alert.rs  audio.rs  buffer.rs  config.rs  container.rs  content.rs  data_types.rs  database.rs  error.rs  gfx_collection.rs  gfx_order.rs  inputs.rs  interface.rs  logic.rs  main.rs  mainloop.rs  renderer.rs  resource.rs  runner.rs  socket.rs  systems.rs  values.rs  widget.rs
src/container/: entity.rs  world.rs
src/container/entity/: mapitem_data.rs  npc_data.rs  player_data.rs  shared_data.rs
src/content/: game_content.rs  inputs.rs  menu_content.rs  resource.rs
src/content/game_content/: camera.rs  content_input.rs  entity.rs  floating_text.rs  interface.rs  map.rs  npc.rs  player.rs  player_data.rs  target.rs
src/content/game_content/interface/: chatbox.rs  inventory.rs  item_description.rs  profile.rs  screen.rs  setting.rs  shop.rs  storage.rs  trade.rs
src/content/game_content/map/: item.rs
src/content/menu_content/: content_input.rs  login.rs  register.rs
src/content/menu_content/content_input/: login_input.rs  register_input.rs
src/data_types/: entity.rs  enums.rs  error.rs  gfx_collection.rs  mod.rs  rgb.rs  sharedstructs.rs  time_ext.rs  tstring.rs  values.rs
src/data_types/time_ext/: duration.rs  instant.rs
src/database/: items.rs  map.rs  npc.rs  shops.rs
src/interface/widget/: button.rs  checkbox.rs  textbox.rs
src/renderer/: fade.rs
src/socket/: config.rs  error.rs  handledata.rs  sends.rs
src/socket/handledata/: mapper.rs  router.rs  routes.rs
src/systems/: audio.rs  config.rs  logic.rs  mainloop.rs  renderer.rs  socket.rs  system_tasks.rs
src/systems/renderer/: fade.rs
src/systems/socket/: bufer_ext.rs  handledata.rs  notls_socket.rs  sends.rs  states.rs  tls_socket.rs
src/systems/socket/handledata/: handle_entity.rs  handle_general.rs  handle_interface.rs  handle_player.rs  handle_trade.rs  mapper.rs  router.rs  routes.rs
src/time_ext/: date.rs  duration.rs  instant.rs
src/widget/: alert.rs  button.rs  checkbox.rs  label.rs  scrollbar.rs  textbox.rs  tooltip.rs
