[package]
authors = [
  "Andrew Wheeler <genusistimelord@outlook.com>",
  "Sherwin Salonga",
  "S.J.R. van Schaik",
]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "client"
version = "0.1.1"

[dependencies]
ahash = "0.8.12"
arboard = "3.5.0"
backtrace = "0.3.75"
bit_op = "0.1.1"
bytey = "0.4.0"
chrono = {version = "0.4.41", disable-defaults = true, features = [
  "clock",
  "serde",
  "std",
]}
educe = {version = "0.6.0", default-features = false, features = [
  "Debug",
  "PartialEq",
  "Default",
]}
futures = "0.3.31"
image = "0.25.6"
indexmap = "2.9.0"
log = {version = "0.4.27", default-features = false}
lru = "0.14.0"
mio = {version = "1.0.4", features = ["os-poll", "net"]}
mmap_bytey = "0.2.0"
pki-types = {package = "rustls-pki-types", version = "1.12.0", features = [
  "std",
]}
rand = "0.9.1"
rcgen = {version = "0.13.2", features = [
  "pem",
  "ring",
], default-features = false}
regex = "1.11.1"
rodio = "0.20.1"
rustls = {version = "0.23.27", default-features = false, features = [
  "logging",
  "ring",
  "std",
  "tls12",
]}
rustls-pemfile = "2.2.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
slab = "0.4.9"
slotmap = "1.0.7"
snafu = {version = "0.8.6", features = [
  "backtraces-impl-backtrace-crate",
  "rust_1_81",
]}
speedy = "0.8.7"
thiserror = "2.0.12"
tokio = {version = "1.45.1", features = ["full"]}
toml = "0.8.22"
uuid = {version = "1.17.0", features = [
  "v7", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
webpki = "0.22.4"
webpki-roots = "1.0.0"
winit = {version = "0.30.11", features = ["serde", "rwh_05"]}

[dependencies.camera]
package = "ascending_camera"
#git = "https://github.com/AscendingCreations/AscendingLibraries"
#path = "../AscendingLibraries/camera"
version = "0.6.0"

[dependencies.input]
package = "ascending_input"
#git = "https://github.com/AscendingCreations/AscendingLibraries"
#path = "../AscendingLibraries/input"
version = "0.4.1"

[dependencies.graphics]
package = "ascending_graphics"
#git = "https://github.com/AscendingCreations/AscendingLibraries"
#path = "../AscendingLibraries/graphics"
features = ["static_dx"]
version = "0.25.0"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = "none"

[profile.release]
codegen-units = 256
debug = false
debug-assertions = false
incremental = true
lto = true
opt-level = 3
overflow-checks = true
panic = 'unwind'
rpath = false
strip = "none"

[profile.dev.package."*"]
opt-level = 2
