[package]
name = "client"
version = "0.1.0"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck.workspace = true
mint.workspace = true
thiserror.workspace = true
winit.workspace = true
image.workspace = true
tokio.workspace = true
guillotiere.workspace = true
serde.workspace = true
camera.workspace = true
input.workspace = true
graphics.workspace = true
log.workspace = true
backtrace.workspace = true
futures.workspace = true
cosmic-text.workspace = true
naga.workspace = true
wgpu.workspace = true
chrono.workspace = true
ubits.workspace = true
hecs.workspace = true
glam.workspace = true
slab.workspace = true
indexmap.workspace = true