[package]
name = "ascending_graphics"
version = "0.1.0"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Enable Iced GUI framework.
#iced = ["iced_wgpu", "iced_winit", "iced_widget", "iced_renderer"]
#additional_widgets = ["iced_aw"]

[dependencies]
async-trait.workspace = true
bytemuck.workspace = true
crevice.workspace = true
crevice-derive.workspace = true
mint.workspace = true
thiserror.workspace = true
winit.workspace = true
image.workspace = true
tokio.workspace = true
guillotiere.workspace = true
serde.workspace = true
camera.workspace = true
input.workspace = true
log.workspace = true
backtrace.workspace = true
futures.workspace = true
cosmic-text.workspace = true
naga.workspace = true
wgpu.workspace = true
chrono.workspace = true
generational_array.workspace = true
ritehash.workspace = true
lru.workspace = true
glam.workspace = true
lyon.workspace = true
slab.workspace = true
indexmap.workspace = true
kdtree.workspace = true
#iced_winit = {git = "https://github.com/iced-rs/iced.git", optional = true}
#iced_wgpu =  {git = "https://github.com/iced-rs/iced.git", optional = true}
#iced_widget =  {git = "https://github.com/iced-rs/iced.git", optional = true}
#iced_renderer = {git = "https://github.com/iced-rs/iced.git", optional = true, features = ["geometry", "image", "wgpu"]}
#iced_aw = {git = "https://github.com/iced-rs/iced_aw.git", version = "0.7.0", branch = "updates", optional = true }
