[package]
name = "ascending_input"
version = "0.1.0"
edition = "2021"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float.workspace = true
serde.workspace = true
winit.workspace = true
smol_str.workspace = true